@@ -118,7 +118,8 @@ public class GremlinDriverIntegrateTest extends AbstractGremlinServerIntegration
         recordingAppender = new Log4jRecordingAppender();
         final org.apache.log4j.Logger rootLogger = org.apache.log4j.Logger.getRootLogger();
 
-        if (name.getMethodName().equals("shouldKeepAliveForWebSockets")) {
+        if (name.getMethodName().equals("shouldKeepAliveForWebSockets") ||
+                name.getMethodName().equals("shouldKeepAliveForWebSocketsWithNoInFlightRequests")) {
             final org.apache.log4j.Logger webSocketClientHandlerLogger = org.apache.log4j.Logger.getLogger(WebSocketClientHandler.class);
             previousLogLevel = webSocketClientHandlerLogger.getLevel();
             webSocketClientHandlerLogger.setLevel(Level.DEBUG);
@@ -135,7 +136,8 @@ public class GremlinDriverIntegrateTest extends AbstractGremlinServerIntegration
     public void teardownForEachTest() {
         final org.apache.log4j.Logger rootLogger = org.apache.log4j.Logger.getRootLogger();
 
-        if (name.getMethodName().equals("shouldKeepAliveForWebSockets")) {
+        if (name.getMethodName().equals("shouldKeepAliveForWebSockets") ||
+                name.getMethodName().equals("shouldKeepAliveForWebSocketsWithNoInFlightRequests")) {
             final org.apache.log4j.Logger webSocketClientHandlerLogger = org.apache.log4j.Logger.getLogger(WebSocketClientHandler.class);
             webSocketClientHandlerLogger.setLevel(previousLogLevel);
         } else if (name.getMethodName().equals("shouldEventuallySucceedAfterMuchFailure")) {
@@ -281,6 +283,69 @@ public class GremlinDriverIntegrateTest extends AbstractGremlinServerIntegration
         } catch (Exception ex) {
             final ResponseException re = (ResponseException) ex.getCause();
             assertEquals(ResponseStatusCode.SERVER_ERROR_TIMEOUT, re.getResponseStatusCode());
+        } finally {
+            cluster.close();
+        }
+    }
+
+    @Test
+    public void shouldKeepAliveForWebSockets() throws Exception {
+        // keep the connection pool size at 1 to remove the possibility of lots of connections trying to ping which will
+        // complicate the assertion logic
+        final Cluster cluster = TestClientFactory.build().
+                minConnectionPoolSize(1).
+                maxConnectionPoolSize(1).
+                keepAliveInterval(1002).create();
+        try {
+            final Client client = cluster.connect();
+
+            // fire up lots of requests so as to schedule/deschedule lots of ping jobs
+            for (int ix = 0; ix < 500; ix++) {
+                assertEquals(2, client.submit("1+1").all().get().get(0).getInt());
+            }
+
+            // don't send any messages for a bit so that the driver pings in the background
+            Thread.sleep(3000);
+
+            // make sure no bonus messages sorta fire off once we get back to sending requests
+            for (int ix = 0; ix < 500; ix++) {
+                assertEquals(2, client.submit("1+1").all().get().get(0).getInt());
+            }
+
+            // there really shouldn't be more than 3 of these sent. should definitely be at least one though
+            final long messages = recordingAppender.getMessages().stream().filter(m -> m.contains("Sending ping frame to the server")).count();
+            assertThat(messages, allOf(greaterThan(0L), lessThanOrEqualTo(3L)));
+        } finally {
+            cluster.close();
+        }
+    }
+
+    @Test
+    public void shouldKeepAliveForWebSocketsWithNoInFlightRequests() throws Exception {
+        // keep the connection pool size at 1 to remove the possibility of lots of connections trying to ping which will
+        // complicate the assertion logic
+        final Cluster cluster = TestClientFactory.build().
+                minConnectionPoolSize(1).
+                maxConnectionPoolSize(1).
+                keepAliveInterval(1002).create();
+        try {
+            final Client client = cluster.connect();
+
+            // forcefully initialize the client to mimic a scenario when client has some active connection with no
+            // in flight requests on them.
+            client.init();
+
+            // don't send any messages for a bit so that the driver pings in the background
+            Thread.sleep(3000);
+
+            // make sure no bonus messages sorta fire off once we get back to sending requests
+            for (int ix = 0; ix < 500; ix++) {
+                assertEquals(2, client.submit("1+1").all().get().get(0).getInt());
+            }
+
+            // there really shouldn't be more than 3 of these sent. should definitely be at least one though
+            final long messages = recordingAppender.getMessages().stream().filter(m -> m.contains("Sending ping frame to the server")).count();
+            assertThat(messages, allOf(greaterThan(0L), lessThanOrEqualTo(3L)));
         } finally {
             cluster.close();
         }
